# agent-video-understanding

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: architecture.instructions.md  engine.instructions.md  memory.instructions.md  skills.instructions.md  templates.instructions.md
agent_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: extract_meta.py  match_videos.py  process_videos.py
src/: agent.py  logger.py  main.py
src/engine/: __init__.py  coordinator.py  decision.py  executor.py  types.py  workflow_transitions.py
src/llm/: __init__.py  client.py  config.py  exceptions.py  video_client.py
src/memory/: __init__.py  models.py  state_manager.py
src/prompting/: environment.py
src/skills/: __init__.py  base.py  definitions.py  models.py
src/tools/: __init__.py  hello_world.py  models.py
videos/analysis/: mixkit-a-bunch-of-dollar-bills-background-47517-hd-ready.txt  mixkit-a-lot-of-cash-over-a-rotating-background-47005-hd-ready.txt  mixkit-administration-of-expenses-and-incomes-46984-hd-ready.txt  mixkit-bearded-man-counting-money-while-he-smokes-47192-hd-ready.txt  mixkit-bitcoin-and-cash-sitting-in-front-of-a-stock-chart-45704-hd-ready.txt  mixkit-child-hands-counting-cash-24061-hd-ready.txt  mixkit-close-up-of-a-stock-market-graphic-47016-hd-ready.txt  mixkit-close-up-of-coins-with-hands-woman-background-47735-hd-ready.txt  mixkit-close-up-to-a-counting-money-machine-46980-hd-ready.txt  mixkit-counting-and-distributing-the-spends-47734-hd-ready.txt  (+18 more)
(+32 files in other folders)
